--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,11 @@ knitr::opts_chunk$set(
 # VicmapR
 
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![Codecov test coverage](https://codecov.io/gh/JustinCally/VicmapR/branch/master/graph/badge.svg)](https://codecov.io/gh/JustinCally/VicmapR?branch=master)
 <!-- badges: end -->
 
-The goal of VicmapR is to provide functions to easily access Victorin Government spatial data through their WFS (Web Feature Service).
+The goal of VicmapR is to provide functions to easily access Victorin Government spatial data through their WFS (Web Feature Service). The package is currently in an early development stage.
 
 ## Installation
 
