--- a/vignettes/query_vicmap.Rmd
+++ b/vignettes/query_vicmap.Rmd
@@ -39,7 +39,7 @@ vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", wfs_version = "1.0.0")
 ```
 
 ```{r filter, eval = FALSE}
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", wfs_version = "1.0.0") %>%
+vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
  filter(HIERARCHY == "L", PFI == 8553127) %>%
   collect()
 ```
@@ -124,7 +124,7 @@ some_point <- melbourne %>% sf::st_centroid()
 
 # How many hits 
 vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", CRS = 4326, wfs_version = "2.0.0") %>%
-  filter(VicmapR::DWITHIN(some_point, distance = 1000, units = "meters")) %>%
+  filter(VicmapR::DWITHIN(some_point, distance = 2000, units = "meters")) %>%
   feature_hits()
 
 data <- vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", CRS = 32755, wfs_version = "2.0.0") %>%
