--- a/vignettes/query_vicmap.Rmd
+++ b/vignettes/query_vicmap.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "How to Query Vicmap Data"
 output: rmarkdown::html_vignette
+date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{How to Query Vicmap Data}
   %\VignetteEngine{knitr::rmarkdown}
@@ -10,39 +11,106 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  echo = FALSE,
+  echo = TRUE,
   comment = "#>"
 )
 ```
 
 ```{r setup}
-library(dplyr)
 library(VicmapR)
 library(sf)
 ```
 
-# How to Query Data
+# How to query data
 
-```{r query, eval = FALSE}
+## Searching for data  
+
+In order to begin a query of the WFS server a spatial layer must be selected. To know which layers are available use the `listLayers()` function, which will return ~ 690 layers to choose from. 
+
+```{r}
+available_layers <- listLayers()
+
+head(available_layers, 10)
+```
+
+
+## Vicmap promise
+
+VicmapR introduces a new class called `vicmap_promise`, which is an extension to the `httr::url` class. Essentially this object is how the vicmap query is stored before data is collected. That is to say `vicmap_promise` is essentially a promise of what data will be retrieved. 
+
+In order to generate a new promise the `vicmap_query` function can be used to select the layer. The promise prints a sample of the data (max = 6 rows) as well as the dimensions (nrow and ncol).  
+
+```{r query}
+# query the watercourse layer
 vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN")
 ```
 
-```{r query_collect, eval = FALSE}
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", wfs_version = "1.0.0") %>%
-  head(50) %>%
-  collect()
-```
+## Adding arguments to the query  
 
-```{r show_query, eval = FALSE}
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN", wfs_version = "1.0.0") %>%
-  head(50) %>%
+The `vicmap_promise` object can be easily added to through piping in of additional functions (e.g. `head()`, `filter()` and `select()`). 
+
+The resulting query can be displayed using the `show_query()` function, which will list the WFS parameters. 
+
+```{r query_arguments}
+vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
+  head(50) %>% #return only 50 rows
+  filter(HIERARCHY == "L") %>% # filter the column 'HIERACHY' to values of 'L'
+  select(HIERARCHY, PFI) %>% # select columns 'HIERARCHY' and 'PFI'
   show_query()
 ```
 
-```{r filter, eval = FALSE}
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
- filter(HIERARCHY == "L", PFI == 8553127) %>%
+In order to return a spatial data.frame object (`sf`) `collect()` must be used.
+
+```{r collect_query}
+watercourse_data <- vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
+  head(50) %>% #return only 50 rows
+  filter(HIERARCHY == "L") %>% # filter the column 'HIERACHY' to values of 'L'
+  select(HIERARCHY, PFI) %>% # select columns 'HIERARCHY' and 'PFI'
   collect()
+
+str(watercourse_data)
+```
+
+
+## Geometric filters
+
+Vicmap translates numerous geometric filter functions available in the Victorian Government's WFS Geoserver supports numerous [geometric filters](https://docs.geoserver.org/stable/en/user/tutorials/cql/cql_tutorial.html#geometric-filters):  
+
++ `EQUALS`   
++ `DISJOINT`   
++ `INTERSECTS`   
++ `TOUCHES`   
++ `CROSSES`   
++ `WITHIN`   
++ `CONTAINS`   
++ `OVERLAPS`   
++ `RELATE`   
++ `DWITHIN`   
++ `BEYOND`  
++ `BBOX`  
+
+These filters can be used within the `filter()` function by providing them an object of class `sf/sfc/sfg/bbox`. 
+
+```{r filter_spatial}
+#### Return objects that intersect melbourne ####
+
+# Read in an example shape to restrict our query to using geometric filtering
+melbourne <- sf::st_read(system.file("shapes/melbourne.geojson", package="VicmapR"), quiet = T)
+# Reset crs to avoid GDAL issues
+st_crs(melbourne$geometry) <- 4326
+# Return data that intersects melbourne
+watercourse_intersects <- vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>% # layer to query
+  filter(INTERSECTS(melbourne)) %>% # more advanced geometric filter
+  collect()
+
+watercourse_bbox <- vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
+  filter(BBOX(sf::st_bbox(melbourne))) %>%
+  collect()
+
+watercourse_dwithin <- vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>%
+  filter(DWITHIN(melbourne %>% sf::st_centroid(), distance = 10000, units = "meters")) %>%
+  collect()
+
 ```
 
 ```{r paginate, eval = FALSE}
