--- a/vignettes/query_vicmap.Rmd
+++ b/vignettes/query_vicmap.Rmd
@@ -23,7 +23,6 @@ library(leaflet)
 
 #check sf installation
 sf::sf_extSoftVersion()
-sf::sf_proj_search_paths()
 ```
 
 # How to query data
@@ -100,6 +99,10 @@ These filters can be used within the `filter()` function by providing them an ob
 
 # Read in an example shape to restrict our query to using geometric filtering
 melbourne <- sf::st_read(system.file("shapes/melbourne.geojson", package="VicmapR"), quiet = T)
+
+st_crs(melbourne)
+
+cat(showSRID("EPSG:4283", multiline="YES"), "\n")
 
 sf::st_transform(melbourne %>% sf::st_union(), pipeline = "+proj=pipeline +step +proj=axisswap +order=2,1") %>% sf::st_as_text()
 
