--- a/vignettes/query_vicmap.Rmd
+++ b/vignettes/query_vicmap.Rmd
@@ -96,7 +96,6 @@ These filters can be used within the `filter()` function by providing them an ob
 
 ```{r filter_spatial, warning = FALSE, message=FALSE, out.width="100%"}
 #### Return objects that intersect melbourne ####
-st_axis_order(TRUE)
 # Read in an example shape to restrict our query to using geometric filtering
 melbourne <- sf::st_read(system.file("shapes/melbourne.geojson", package="VicmapR"), quiet = F) %>% 
   sf::st_transform(4283)
@@ -105,10 +104,8 @@ st_crs(melbourne)
 
 sf::st_transform(melbourne %>% sf::st_union(), pipeline = "+proj=pipeline +step +proj=axisswap +order=2,1") %>% sf::st_as_text()
 
-sf::st_transform(melbourne %>% sf::st_union(), pipeline = "+proj=pipeline +step +proj=axisswap +order=1,2", reverse = F) %>% sf::st_as_text()
+sf::st_transform(melbourne %>% sf::st_union(), pipeline = "+proj=pipeline +step +proj=axisswap +order=1,2") %>% sf::st_as_text()
 
-
-st_axis_order(FALSE)
 # Return data that intersects melbourne
 rail_intersects <- vicmap_query(layer = "datavic:VMTRANS_TR_RAIL") %>% # layer to query
   filter(INTERSECTS(melbourne)) %>% # more advanced geometric filter
