--- a/vignettes/leaflet_integratration.Rmd
+++ b/vignettes/leaflet_integratration.Rmd
@@ -66,3 +66,30 @@ leaflet::leaflet() %>%
   leaflet::addLayersControl(overlayGroups = c(filtered_l$Name, "Melbourne polygon"))
 ```
 
+https://labs.easyblog.it/maps/leaflet-panel-layers/examples/group-layers.html
+
+
+
+```{r}
+addWMSLoop_extras <- function(map, layers, ...) {
+for(x in unique(layers)) {
+  map <- leaflet.extras2::addWMS(map, baseUrl = base_wms_url, layers = x, 
+                                        options = WMSTileOptions(format = "image/png", transparent = TRUE), 
+                       group = x, ...)
+}
+return(map)
+}
+
+leaflet::leaflet() %>% 
+  leaflet::addProviderTiles("CartoDB.Positron") %>%
+  addWMSLoop_extras(filtered_l$Name) %>%
+  leaflet::addPolygons(data = melbourne, 
+                       color = "grey", 
+                       group = "Melbourne polygon") %>%
+  leaflet::addLayersControl(overlayGroups = c(filtered_l$Name, "Melbourne polygon"))
+```
+
+Java:  
+
+
+
