--- a/README.Rmd
+++ b/README.Rmd
@@ -113,3 +113,19 @@ catchments <- vicmap_query("ahgf_shcatch:AHGFCatchment") %>%
 ```
 
 *__Note__: Using other Geoserver WFS urls will not necessarily work as expected due to the potential differences in the capabilities of the Geoserver instance*
+
+
+### License
+Modifications Copyright (C) 2020 Justin Cally
+Copyright 2018 Province of British Columbia
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and limitations under the License.
+
