--- a/README.Rmd
+++ b/README.Rmd
@@ -119,9 +119,8 @@ catchments <- vicmap_query("ahgf_shcatch:AHGFCatchment") %>%
 
 ### License
 
-Modifications Copyright (c) 2020 Justin Cally  MIT License
-
 Copyright 2018 Province of British Columbia  
+Modifications Copyright 2020 Justin Cally
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
